hphp/test/slow/object/const/non-const-from-non-flattened-trait.php.expectf
Fatal error: Classes, interfaces, traits and enums may not be declared `__Const` in %s/non-const-from-non-flattened-trait.php on line 4
